; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_28764.c_ShowError.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_28764.c_ShowError.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FORMAT_MESSAGE_ALLOCATE_BUFFER = common dso_local global i32 0, align 4
@FORMAT_MESSAGE_FROM_SYSTEM = common dso_local global i32 0, align 4
@LANG_NEUTRAL = common dso_local global i32 0, align 4
@SUBLANG_DEFAULT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [6 x i8] c"Error\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ShowError() #0 {
  %1 = alloca i64, align 8
  %2 = load i32, i32* @FORMAT_MESSAGE_ALLOCATE_BUFFER, align 4
  %3 = load i32, i32* @FORMAT_MESSAGE_FROM_SYSTEM, align 4
  %4 = or i32 %2, %3
  %5 = call i32 (...) @GetLastError()
  %6 = load i32, i32* @LANG_NEUTRAL, align 4
  %7 = load i32, i32* @SUBLANG_DEFAULT, align 4
  %8 = call i32 @MAKELANGID(i32 %6, i32 %7)
  %9 = ptrtoint i64* %1 to i32
  %10 = call i32 @FormatMessage(i32 %4, i32* null, i32 %5, i32 %8, i32 %9, i32 0, i32* null)
  %11 = load i64, i64* %1, align 8
  %12 = trunc i64 %11 to i32
  %13 = call i32 @MessageBoxA(i32 0, i32 %12, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i32 0)
  %14 = call i32 @exit(i32 1) #3
  unreachable
}

declare dso_local i32 @FormatMessage(i32, i32*, i32, i32, i32, i32, i32*) #1

declare dso_local i32 @GetLastError(...) #1

declare dso_local i32 @MAKELANGID(i32, i32) #1

declare dso_local i32 @MessageBoxA(i32, i32, i8*, i32) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
